syntax = "proto3";

package api.server.service.v1;
import "errors/errors.proto";

// 多语言特定包名，用于源代码引用
option go_package = "mhdsg/api/server/service/v1;v1";

enum ErrorReason {
  // 设置缺省错误码
  option (errors.default_code) = 500;

  NO_USER_SERVER_INFO = 0 [(errors.code) = 1];
  NO_SERVER_INFO = 1 [(errors.code) = 2];
}